Update HelloDataTypesShort.java